code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_5.wast
(assert_invalid
  (module (func $type-num-vs-num
    (unreachable) (drop (i64.eqz (i32.const 0))))
  )
  "type mismatch"
)